Added updated optimality endpoint to use actual data
