# DataRelayService/routes/optimality.js
@@ -1,13 +1,20 @@
 ﻿'use strict';
 var express = require('express');
 var router = express.Router();
+var debug = require('debug')('DataRelayService');
+var optimalityService = require('../domain/optimalityService');
 
 router.get('/', function (req, res) {
-    res.json({ optimality: 'good' });
-});
+    optimalityService.getLatestOptimalities()
+        .then((optimalities) => {
+            res.json(optimalities);
+        }).catch((err) => {
+            console.log(err);
+            debug(err);
 
-router.get('/:test', function (req, res) {
-    res.json({ optimality: req.params.test });
+            res.statusCode = 500;
+            res.json({ errorMessage: err.message });
+        });
 });
 
 module.exports = router;
