# DataRelayService/swagger.json
@@ -58,38 +58,10 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/Optimality"
-            }
-          }
-        }
-      }
-    },
-    "/optimality/{test}": {
-      "get": {
-        "tags": [
-          "optimality"
-        ],
-        "summary": "Test UI with specified optimality",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "test",
-            "type": "string",
-            "required": true,
-            "description": "Optimality to include in response"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "schema": {
-              "$ref": "#/definitions/TestOptimality"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Optimality"
+              }
             }
           }
         }
@@ -114,7 +86,7 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/Currencies"
-              } 
+              }
             }
           },
           "500": {
@@ -258,20 +230,18 @@
     "Optimality": {
       "type": "object",
       "properties": {
+        "symbol": {
+          "type": "string"
+        },
+        "name": {
+          "type":  "string" 
+        },
         "optimality": {
           "type": "string",
           "enum": [
             "good",
             "bad"
           ]
-        }
-      }
-    },
-    "TestOptimality": {
-      "type": "object",
-      "properties": {
-        "optimality": {
-          "type": "string"
         }
       }
     },
